spark 3.3.2 with s3 read write